- In add#OrderPartToShipment only item quantities not yet associated with a
  Shipment (not shipped quantities) are added
- OrderDisplayInfo now gets quantity not shipped, billed by item and part

Bug Fixes

- Fixed issue with fiscal and other TimePeriod create when db time zone
  was very different from user time zone, now uses db time zone for date
  calculations

===========================================================================
Release 1.0.1 - 26 Mar 2016
===========================================================================

Mantle Universal Service Library 1.0.1 is a minor new feature and bug fix
release.

This release is based on Moqui Framework 1.6.2 and mantle-udm 1.0.1.

New Features

- Improved tenant access product subscription handling along with improved
  tenant provisioning services in moqui-framework
- Various project management improvements (like more general use of
  Assignee instead of Worker role, etc) and added services for a project
  progress report
- Various name templates updated for cleaner formatting (ID: instead of
  ID in square brackets)
- When creating a Shipment from/to party set based on origin/dest facility
  if not specified

Bug Fixes

- Fixed issue with get#InventoryProjectedInfo service where field names in
  sum aggregations were incorrect (missing sub-object names) for
  reservations, issuances, and receipts fields; GitHub issue #6

===========================================================================
Release 1.0.0 - 24 Jan 2016
===========================================================================

Mantle Universal Service Library 1.0.0 is the first release as a component
repository separate from the other components in Mantle Business Artifacts.

This release is based on Moqui Framework 1.6.1 and mantle-udm 1.0.0.

The initial code is from Mantle 1.2.0 and has only minor changes but has
updates for the new Moqui Framework component management features and use