@@ -49,6 +49,11 @@ along with this software (see the LICENSE.md file). If not, see
         <condition><expression>statusChanged &amp;&amp; (statusId in ['PmntCancelled', 'PmntVoid', 'PmntRefunded'])</expression></condition>
         <actions><service-call name="mantle.ledger.PaymentAutoPostServices.revert#PaymentPost" in-map="context" ignore-error="true"/></actions>
     </seca>
+    <!-- Payment Undeliver (PmntDelivered => PmntPromised) revert TX -->
+    <seca service="update#mantle.account.payment.Payment" when="post-service" run-on-error="false">
+        <condition><expression>statusChanged &amp;&amp; oldStatusId == 'PmntDelivered' &amp;&amp; statusId == 'PmntPromised'</expression></condition>
+        <actions><service-call name="mantle.ledger.PaymentAutoPostServices.revert#PaymentPost" in-map="context" ignore-error="true"/></actions>
+    </seca>
     <!-- Payment Application GL Posting -->
     <seca service="create#mantle.account.payment.PaymentApplication" when="post-service" run-on-error="false">
         <actions><service-call name="mantle.ledger.PaymentAutoPostServices.post#PaymentApplication" in-map="context" ignore-error="true"/></actions>
