@@ -30,6 +30,8 @@ Bug Fixes
 - Fixed issue with fiscal and other TimePeriod create when db time zone
   was very different from user time zone, now uses db time zone for date
   calculations
+- Fixed issue where GL TX for Payment not reversed on Undeliver status
+  transition (PmntDelivered to PmntPromised)
 
 ===========================================================================
 Release 1.0.1 - 26 Mar 2016
